--- a/_posts/2024-11-08-jota-2024.md
+++ b/_posts/2024-11-08-jota-2024.md
@@ -2,7 +2,9 @@
 layout: post
 title: JOTA 2024
 date: 2024-11-08
-categories: Aktualności
+author: Jędrzej Marsz, SQ2DK
+categories: 
+  - Aktualności
 ---
 
 Po raz kolejny mieliśmy przyjemność pomóc harcerzom z [Hufca Gdynia](https://www.zhp.gdynia.pl/)
@@ -23,6 +25,9 @@ nie ostatni. Wszyscy uczestnicy warsztatów ukończyli je z działającymi radia
 To już kolejny raz, kiedy klub SP2ZIE pomaga harcerzom przy organizacji stacji w ramach programu JOTA i zapewne nie ostatni.
 
 ![JOTA 2024](/assets/images/jota_2024_radio_01.jpg)
+
 ![JOTA 2024](/assets/images/jota_2024_radio_04.jpg)
+
 ![JOTA 2024](/assets/images/jota_2024_warsztaty_02.jpg)
+
 ![JOTA 2024](/assets/images/jota_2024_warsztaty_03.jpg)
