--- a/_posts/2025-01-01-wosp-sstv.md
+++ b/_posts/2025-01-01-wosp-sstv.md
@@ -7,4 +7,6 @@ categories:
   - Aktualności
 ---
 
+Tutaj jakiś tekst wprowadzający, który pokazuje się na stronie głównej.
+
 {% include image-gallery.html folder="assets/images/sstv/2025_WOŚP" %}
