Fix/add first paragraph

--- a/_posts/2009-08-20-logi-logs.md
+++ b/_posts/2009-08-20-logi-logs.md
@@ -7,6 +7,9 @@ categories:
   - Tall Ships' Races 2009 Gdynia on the AIR
 ---
 
+Poniżej przedstawiamy szczegółowe zestawienie logów QSO oraz statystyki DXCC uzyskane przez zespół TSR2009 podczas
+specjalnej aktywności radiowej towarzyszącej regatom Tall Ships' Races 2009 w Gdyni.
+
 **Received logs**
 
 SN2009TSR 1003 QSOs & 45 DXCC - Finished successfull<br>
