--- a/_posts/2025-01-01-wosp-sstv.md
+++ b/_posts/2025-01-01-wosp-sstv.md
@@ -7,6 +7,6 @@ categories:
   - Aktualności
 ---
 
-Tutaj jakiś tekst wprowadzający, który pokazuje się na stronie głównej.
+Galeria obrazków SSTV odebranych z okazji 33 finału WOŚP 2025.
 
 {% include image-gallery.html folder="assets/images/sstv/2025_WOŚP" %}
