--- a/_posts/2023-12-18-sn20iss.md
+++ b/_posts/2023-12-18-sn20iss.md
@@ -3,8 +3,7 @@ layout: post
 title: SN20ISS
 date: 2023-12-18
 author: Dariusz Mankiewicz, SP2HQY
-categories: 
-  - Stacje okolicznościowe
+categories: radio
 ---
 
 W 1996 roku ARISS rozpoczęło prace nad przygotowaniem sprzętu radioamatorskiego i umieszczeniem go na stacji orbitalnej. W 1999 roku w kosmosie połączono pierwsze moduły stacji wyprodukowane w Rosji i USA. Na początku listopada 2000 roku w ramach 1. Ekspedycji na MSK, na stacji zamieszkała pierwsza załoga. Udane próby nawiązania łączności przy użyciu radioamatorskiego sprzętu ze stacji kosmicznej, ze stacjami naziemnymi na Świecie, rozpoczęto 13 listopada 2000 roku. Próby te trwały kilka dni. W dniu 21 grudnia 2000 roku przeprowadzono pierwszą wcześniej zaplanowaną szkolną łączność ARISS. Podczas tego połączenia uczniowie ze szkoły w USA otrzymywali odpowiedzi bezpośrednio z kosmosu od astronauty z pokładu Międzynarodowej Stacji Kosmicznej. Od tamtej pory zorganizowano ponad 1300 łączności ARISS na całym świecie, w tym dwadzieścia jeden dla uczniów z placówek edukacyjnych w Polsce, zaś **pierwszą z nich w Gdyni przez Koło Naukowe SZKUNER SP2ZIE** ówczesnej Wyższej Szkoły Morskiej.
