--- a/_posts/2009-08-20-logi-logs.md
+++ b/_posts/2009-08-20-logi-logs.md
@@ -3,8 +3,7 @@ layout: post
 title: Tall Ships' Races 2009 Logs
 date: 2009-08-20
 author: Roman Henning, SQ2RH
-categories: 
-  - Tall Ships' Races 2009 Gdynia on the AIR
+categories: radio
 ---
 
 Poniżej przedstawiamy szczegółowe zestawienie logów QSO oraz statystyki DXCC uzyskane przez zespół TSR2009 podczas
