--- a/_posts/2024-11-08-jota-2024.md
+++ b/_posts/2024-11-08-jota-2024.md
@@ -3,8 +3,7 @@ layout: post
 title: JOTA 2024
 date: 2024-11-08
 author: Jędrzej Marsz, SQ2DK
-categories: 
-  - Aktualności
+categories: radio
 ---
 
 Po raz kolejny mieliśmy przyjemność pomóc harcerzom z [Hufca Gdynia](https://www.zhp.gdynia.pl/)
