--- a/_posts/2025-01-01-wosp-sstv.md
+++ b/_posts/2025-01-01-wosp-sstv.md
@@ -3,8 +3,7 @@ layout: post
 title: WOŚP 2025
 date: 2025-01-01
 author: Paweł Skrzypkowski, SQ2IPS 
-categories:
-  - Aktualności
+categories: radio
 ---
 
 Galeria obrazków SSTV odebranych z okazji 33 finału WOŚP 2025.
