--- a/_posts/2014-12-17-cq-ww-rtty-2014.md
+++ b/_posts/2014-12-17-cq-ww-rtty-2014.md
@@ -3,7 +3,7 @@ layout: post
 title: CQ WW RTTY 2014
 date: 2014-12-17
 author: Dariusz Mankiewicz, SP2HQY
-categories: zawody
+category: zawody
 ---
 
 Apetyt rośnie w miarę jedzenia… po zajęciu 4 miejsca w 24 godzinnych zawodach SP DX RTTY 2014 postanowiliśmy spróbować swoich sił w zawodach większego kalibru, czyli 48 godzinnych. Wybór padł na zawody CQ WW RTTY 2014. Zawody na tym poziomie wymagają znacznie większego wysiłku jak i odpowiednich przygotowań. Zatem planowanie zaczęliśmy … dopiero we wrześniu. Nie mniej przygotowania udało się zakończyć na czas. Małe przemeblowanie pomieszczenia radiostacji, montaż anteny na dolne pasma oraz przebudowa systemu okablowania fiderów antenowych, a także wyposażenie stacji we wzmacniacz dopełniło dzieła.
