Categories and subcategories

--- a/_posts/2009-08-20-logi-logs.md
+++ b/_posts/2009-08-20-logi-logs.md
@@ -4,6 +4,7 @@ title: Tall Ships' Races 2009 Logs
 date: 2009-08-20
 author: Roman Henning, SQ2RH
 category: radio
+subcategory: tsr2009
 ---
 
 Poniżej przedstawiamy szczegółowe zestawienie logów QSO oraz statystyki DXCC uzyskane przez zespół TSR2009 podczas
