--- a/_posts/2013-10-16-3z2lh-latarnia-hel-2013.md
+++ b/_posts/2013-10-16-3z2lh-latarnia-hel-2013.md
@@ -4,6 +4,7 @@ title: 3Z2LH Latarnia Hel 2013
 date: 2013-10-16
 author: Dariusz Mankiewicz, SP2HQY
 category: radio
+subcategory: latarnie
 ---
 
 W dniach 17-18 sierpnia 2013 roku „popełniliśmy” kolejną aktywność radiową z Latarni Morskiej HEL. Tym razem pod znakiem 3Z2LH obchodziliśmy Międzynarodowy Weekend Latarniany,  jak i Święto Latarnika. Aktywność radiową w barwach klubu przeprowadzili  : Darek SP2HQY, Maciej SP2GPU, Robert SQ2WHH i Wojtek SP2ALT. Wyprawa zaczęła się w sobotę 17 sierpnia 2013 o 6:00 w Rumi, gdzie nastąpiła zbiórka i przepakowanie sprzętu do jednego samochodu. Droga na Hel przebiegła bez problemów i o 7:30 ekipa dotarła do Latarni.  Na miejscu natychmiast zabraliśmy się za rozwieszanie anten. Na początek dipol dwupasmowy dla pasm 3,5 i 7 MHz. Potem wędrówka na szczyt Latarni (SQ2WHH i SP2ALT) by zawiesić dipol na pasmo 3,5 MHz jako sloper (super widoki z galerii). Na koniec dipol ma pasmo 14MHz i antena X-200 na zakres 2m i 70cm. Podłączenie urządzeń i ustawienie dachu nad głową. Po  godzinie 10 stanowisko było gotowe do pracy, jednakże warunki propagacyjne nie sprzyjały i początek nie był rewelacyjny. Zasadnicza praca zaczęła się więc po południu, gdzie okazjonalnie wzięliśmy udział w zawodach Kamykowe Wici. Największy ruch w eterze odnotowano dopiero wieczorem, jednakże wraz z upływem czasu warunki propagacyjne pogarszały się i dopiero w godzinach porannych znów pasma ożyły. Aktywność radiowa została zakończona o godz. 10.
