--- a/_posts/2014-07-02-dni-otwarte-2014.md
+++ b/_posts/2014-07-02-dni-otwarte-2014.md
@@ -3,7 +3,8 @@ layout: page
 title: Dni Otwarte 2014
 date: 2014-07-02
 author: Dariusz Mankiewicz, SP2HQY
-category: klub
+category: archiwum
+subcategory: klub
 ---
 
 Po raz kolejny nasze koło promowało Akademię Morską w czasie dni otwartych. W dniu 4 kwietnia 2014 roku w budynku głównym rozłożyliśmy nasz sprzęt i opowiadaliśmy osobom zainteresowanym podjęciem studiów na Akademii Morskiej w Gdyni o uczelni. Prezentowaliśmy mobilny zestaw do łączności satelitarnej w paśmie 2m i 70 cm, zestaw systemu AIS, czyli automatycznej identyfikacji statków, a także można było obejrzeć film z przebiegu jednej z przeprowadzonych przez członków koła łączności z Międzynarodową Stacją Kosmiczną (ISS) w ramach programu ARISS.
