--- a/_posts/2024-11-08-jota-2024.md
+++ b/_posts/2024-11-08-jota-2024.md
@@ -4,6 +4,7 @@ title: JOTA 2024
 date: 2024-11-08
 author: Jędrzej Marsz, SQ2DK
 category: radio
+subcategory: terenowe
 ---
 
 Po raz kolejny mieliśmy przyjemność pomóc harcerzom z [Hufca Gdynia](https://www.zhp.gdynia.pl/)
