--- a/_posts/2025-01-01-wosp-sstv.md
+++ b/_posts/2025-01-01-wosp-sstv.md
@@ -4,6 +4,7 @@ title: WOŚP 2025
 date: 2025-01-01
 author: Paweł Skrzypkowski, SQ2IPS 
 category: radio
+subcategory: wosp
 ---
 
 Galeria obrazków SSTV odebranych z okazji 33 finału WOŚP 2025.
